# nova-compute-flex

./: CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg
contrib/devstack/: README.first  prepare_devstack.sh
contrib/devstack/extras.d/: 70-flex.sh  70-granite.sh
contrib/devstack/lib/: flex
contrib/devstack/lib/nova_plugins/: hypervisor-flex
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/nova/rootwrap.d/: flex.filters
flex/virt/lxc/: __init__.py  config.py  containers.py  driver.py  hostops.py  images.py  utils.py  vifs.py
flex/virt/lxc/images/: btrfs.py  localfs.py
ncflex/nova/tests/virt/flex/: test_driver.py  test_lxc_usernet.py
ncflex/nova/virt/flex/: __init__.py  config.py  containers.py  driver.py  host_utils.py  hostops.py  images.py  lxc_usernet.py  utils.py  vifs.py  volumes.py
nova/flex/tests/: test_driver.py
nova/flex/virt/: __init__.py  config.py  containers.py  driver.py  hostops.py  images.py  utils.py  vifs.py
nova_compute_flex.egg-info/: entry_points.txt
