[metadata]
name = nova-compute-flex
summary = native lxc for openstack
description-file =
    README.rst
version = 0.1.3
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
   ncflex
namespace_packages = 
   ncflex

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ncflex/locale
domain = ncflex

[update_catalog]
domain = ncflex
output_dir = ncflex/locale
input_file = ncflex/locale/nova-compute-flex.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ncflex/locale/nova-compute-flex.pot
